<resources>
    <string name="app_name">Wheel_Loader_F_Series_UI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Crash_Toast_Text">Crash</string>
    <string name="Error_Report">Error Report</string>
    <string name="Crash_Data">Crash Data</string>
    <string name="Hr">Hr</string>
    <string name="C">℃</string>
    <string name="F">℉</string>
    <string name="V">V</string>
    <string name="ton">ton</string>
    <string name="lb">lb</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="Active_Fault">Active Fault</string>
    <string name="Maintenance">Maintenance</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Disable">Disable</string>
    <string name="Enable">Enable</string>
    <string name="On_Always">On, Always</string>
    <string name="On_Once">On, Once</string>
    <string name="Default">Default</string>
    <string name="Manual">Manual</string>
    <string name="Automatic">Automatic</string>
    <string name="Boom">Boom</string>
    <string name="Bucket">Bucket</string>
    <string name="Initialization">Initialization</string>
    <string name="km_h">km/h</string>
    <string name="mph">mph</string>
    <string name="l_h">l/h</string>
    <string name="rpm">rpm</string>
    <string name="Setting">Setting</string>
    <string name="Clear">Clear</string>
    <string name="km">km</string>
    <string name="mile">mile</string>
    <string name="Temp">Temp</string>
    <string name="Speed">Speed</string>
    <string name="Weight">Weight</string>
    <string name="Pressure">Pressure</string>
    <string name="bar">bar</string>
    <string name="Mpa">Mpa</string>
    <string name="kgf_cm">kgf/cm²</string>
    <string name="Psi">Psi</string>
    <string name="Hour">Hour</string>
    <string name="Min">Min</string>
    <string name="Day">Day</string>
    <string name="Sec">Sec</string>
    <string name="Initialize_">Initialize?</string>
    <string name="Waiting_for_initialization">Waiting for initialization.</string>
    <string name="User_Password">User Password</string>
    <string name="Service_Password">Service Password</string>
    <string name="Incorrect_Password">Incorrect Password</string>
    <string name="_5_10_digits">5~10 digits</string>
    <string name="Searching">Searching</string>
    <string name="Password_Changed">Password Changed</string>
    <string name="Re_entering_Password">Re-entering Password</string>
    <string name="Current_Password">Current Password</string>
    <string name="New_Password">New Password</string>
    <string name="Re_entering_New_Password">Re-entering Password</string>
    <string name="Access_Denied">Access Denied</string>
    <string name="_5_12_digits">5~12 digits</string>
    <string name="No_Changes_executed">No Changes executed</string>
    <string name="Skip">Skip</string>
    <string name="AS">A/S</string>
    <string name="Percent">%</string>
    <string name="mA">mA</string>
    <string name="Check_joystick_steering_enable_fail_condition">Check joystick enable fail condition.</string>
    <string name="Check_EHCU_Fault_Code">Check EHCU Fault Code</string>
    <string name="Check_Steering_Joystick_Position">Check Steering Joystick Position</string>
    <string name="Check_Seat_Switch_On">Check Seat Switch On</string>
    <string name="Check_Armrest_Swtich_On">Check Armrest Switch On</string>
    <string name="Check_Engine_Run">Check Engine Run</string>
    <string name="Check_Machine_Stop">Check Machine Stop</string>
    <string name="Check_TM_Control_Selection">Check TM Control Selection</string>
    <string name="Finish">Finish</string>
    <string name="Initial_Para_Error_Found">Initial Parameter Error Found</string>
    <string name="Please_Reset_Power">Please Reset Power</string>
    <string name="l">l</string>
    <string name="Machine_Serial_Number">Machine Serial Number</string>
    <string name="Serial_No">Serial No :</string>
    <string name="Re_entering_Serial_No">Re-entering Serial No :</string>
    <string name="ENGINE_MODE">ENGINE MODE</string>
    <string name="CCO_MODE">C.C.O. Mode</string>
    <string name="ICCO_MODE">I.C.C.O. MODE</string>
    <string name="SHIFT_MODE">SHIFT MODE</string>
    <string name="TC_LOCK_UP">T.C. LOCK UP</string>
    <string name="LATEST_HOURMETER">LATEST HOUR METER</string>
    <string name="AVERAGE_FUEL_RATE">AVERAGE FUEL RATE</string>
    <string name="TOTAL_ODOMETER">TOTAL ODOMETER</string>
    <string name="LATEST_ODOMETER">LATEST ODOMETER</string>
    <string name="ECONO">ECONO</string>
    <string name="STANDARD">STANDARD</string>
    <string name="POWER">POWER</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="H">H</string>
    <string name="MANUAL">MANUAL</string>
    <string name="AL">AL</string>
    <string name="AN">AN</string>
    <string name="AH">AH</string>
    <string name="Total_Hourmeter">Total Hour meter</string>
    <string name="Latest_Hourmeter">Latest Hour meter</string>
    <string name="Average_Fuel_Rate">Average Fuel Rate</string>
    <string name="Total_Odometer">Total Odometer</string>
    <string name="Latest_Odometer">Latest Odometer</string>
    <string name="HYD_Temp">HYD Temp.</string>
    <string name="TM_Oil_Temp">TM Oil Temp.</string>
    <string name="Battery_Volt">Battery Volt.</string>
    <string name="Weighing_System">Weighing System</string>
    <string name="Coolant_Temp">Coolant Temp.</string>
    <string name="User_Switching">User Switching</string>
    <string name="Help">Help</string>
    <string name="Bucket_Full_In_Error">Bucket Full In Error</string>
    <string name="Sudden_Change_Error">Sudden Change Error</string>
    <string name="User1">User1</string>
    <string name="User2">User2</string>
    <string name="User3">User3</string>
    <string name="User4">User4</string>
    <string name="Save">Save</string>
    <string name="Apply">Apply</string>
    <string name="Item">Item</string>
    <string name="Current_Data">Current Data</string>
    <string name="Loading_Data">Loading Data</string>
    <string name="Lamp_SeatBelt">Seat Belt</string>
    <string name="Lamp_FanReverse">Fan Reverse</string>
    <string name="Lamp_EngineAutoShutdown">Engine Auto Shutdown</string>
    <string name="Lamp_LockUpClutch">Lock Up Clutch</string>
    <string name="Lamp_RideControl">Ride Control</string>
    <string name="Lamp_ClutchCutOff">Clutch Cut Off</string>
    <string name="Lamp_Warmingup">Warming Up</string>
    <string name="Lamp_FuelWarmer">Fuel Warmer</string>
    <string name="Lamp_Preheat">Preheat</string>
    <string name="Lamp_FloatMode">Float Mode</string>
    <string name="Bucket_Full_In_Error_Warning">Bucket is not full in, though weigh may be inaccurate. Press the Enter Key to reweigh.</string>
    <string name="Sudden_Change_Error_Warning">Angular speed is a sudden change, though weigh may be inaccurate. Press the Enter Key to reweigh.</string>
    <string name="Hydraulic_Oil_Temp_Low_Warning">Hydraulic oil temperature low.</string>
    <string name="CloseMulti">"Player is running.\nYou want to close a Player?"</string>
    <string name="CloseMira">"Smart Terminal is running.\nYou want to close a Miracast?"</string>
    <string name="Front_Axle_Temp">Front Axle Temp.</string>
    <string name="Rear_Axle_Temp">Rear Axle Temp.</string>
    <string name="A_DAYS_FUEL_USED">A DAYS FUEL USED</string>
    <string name="A_Days_Fuel_Used">A Days Fuel Used</string>
    <string name="Axle_Warning_Popup">"CAUTION!\nOne of axles exceeds allowable oil temperature‼\nStop operating the machine and cool down axle oil\nuntil warning lamp goes off."</string>
    <string name="Boom_Detent_Mode">Boom Detent Mode</string>
    <string name="Bucket_Detent_Mode">Bucket Detent Mode</string>
    <string name="Main_Light">Main Light</string>
    <string name="Work_Light">Work Light</string>
    <string name="Auto_Grease">Auto Grease</string>
    <string name="Quick_Coupler">Quick Coupler</string>
    <string name="Ride_Control">Ride Control</string>
    <string name="Work_Load">Work Load</string>
    <string name="Beacon_Lamp">Beacon Lamp</string>
    <string name="Rear_Wiper">Rear Wiper</string>
    <string name="Mirror_Heat">Mirror Heat</string>
    <string name="Detent_Setting">Detent Setting</string>
    <string name="Fine_Modulation">Fine Modulation</string>
    <string name="Position_Lamp">Position Lamp</string>
    <string name="Head_Lamp">Head Lamp</string>
    <string name="Front">Front</string>
    <string name="Rear">Rear</string>
    <string name="Locking_Attachment">Locking Attachment</string>
    <string name="Unlocking_Attachment">Unlocking Attachment</string>
    <string name="On_Conditional_Speed">On, Conditional Speed</string>
    <string name="Weighing_System_Mode">Weighing System Mode</string>
    <string name="Weighing_Display">Weighing Display</string>
    <string name="Error_Detection">Error Detection</string>
    <string name="Boom_Pressure_Calibration">Boom Pressure Calibration</string>
    <string name="Daily">Daily</string>
    <string name="Total_A">Total A</string>
    <string name="Total_B">Total B</string>
    <string name="Total_C">Total C</string>
    <string name="Intermittent">Intermittent</string>
    <string name="Low">Low</string>
    <string name="Washer">Washer</string>
    <string name="Save_Position">Save Position</string>
    <string name="Forward">Forward</string>
    <string name="Backward">Backward</string>
    <string name="Excuting_Locking_Attachment">Executing Locking Attachment.</string>
    <string name="Excuting_Unlocking_Attachment">Executing Unlocking Attachment.</string>
    <string name="Attachment_Unlocked_Check_Locking_Status">Attachment Unlocked. Check Locking Status.</string>
    <string name="Do_you_want_to_turn_on_Mirror_Heat">Do you want to turn on Mirror Heat?</string>
    <string name="Do_you_want_to_turn_on_Auto_Grease">Do you want to turn on Auto Grease?</string>
    <string name="Do_not_show_again">Do not show again</string>
    <string name="This_machine_does_not_support_this_feature">This machine does not support this feature.</string>
    <string name="Auto_Grease_is_NOT_equipped">Auto Grease is NOT equipped.</string>
    <string name="Beacon_Lamp_is_NOT_equipped">Beacon Lamp is NOT equipped.</string>
    <string name="Mirror_Heat_is_NOT_equipped">Mirror Heat is NOT equipped.</string>
    <string name="Quick_Coupler_is_NOT_equipped">Quick Coupler is NOT equipped.</string>
    <string name="Ride_Control_is_NOT_equipped">Ride Control is NOT equipped.</string>
    <string name="Mode">Mode</string>
    <string name="Monitoring">Monitoring</string>
    <string name="Management">Management</string>
    <string name="Preference">Preference</string>
    <string name="Multimedia">Multimedia</string>
    <string name="Eng">ENG.</string>
    <string name="TM">TM.</string>
    <string name="HYD">HYD.</string>
    <string name="ETC">ETC.</string>
    <string name="CCO_Mode">C.C.O. Mode</string>
    <string name="ICCO_Mode">I.C.C.O. Mode</string>
    <string name="Shift_Mode">Shift Mode</string>
    <string name="Kick_Down">Kick Down</string>
    <string name="Engine_Speed">Engine Speed</string>
    <string name="Engine_Setting">Engine Setting</string>
    <string name="TC_Lock_Up">T.C. Lock Up</string>
    <string name="Bucket_Priority">Bucket Priority</string>
    <string name="MODE1">MODE 1</string>
    <string name="MODE2">MODE 2</string>
    <string name="Smart_Terminal">Smart Terminal</string>
	<string name="Entertainment_limit">Entertainment limit</string>
	<string name="Select_Menu">Select Menu</string>
	<string name="SBR_Alarm">SBR Alarm</string>
</resources>