<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout_rightup_main_b_engine_mode_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_right_up" >
    
    <TextView
        android:id="@+id/textView_rightup_main_b_enginemode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView_rightup_main_b_enginemode_line"
        android:layout_marginRight="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/ENGINE_MODE"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/main_title_amber"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_rightup_main_b_enginemode_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/main_popup_line" />
    
    <RadioGroup
        android:id="@+id/radioGroup_rightup_main_b_enginemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="328dp" >

       <RadioButton
           android:id="@+id/radioButton_rightup_main_b_enginemode_econo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/ECONO"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:textSize="25sp"
           android:textStyle="bold" />

       <RadioButton
           android:id="@+id/radioButton_rightup_main_b_enginemode_standard"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/STANDARD"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:textSize="25sp"
           android:textStyle="bold" />
       
       <RadioButton
           android:id="@+id/radioButton_rightup_main_b_enginemode_power"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/POWER"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:textSize="25sp"
           android:textStyle="bold" />

   </RadioGroup>

</RelativeLayout>
