<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout_key_main_b_workload_accumulation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_key_bg" >

    <ImageView
        android:id="@+id/imageView_key_main_b_workload_accumulation_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/main_key_line" />
    
    <TextView
        android:id="@+id/textView_key_main_b_workload_accumulation_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView_key_main_b_workload_accumulation_line"
        android:layout_alignLeft="@+id/imageView_key_main_b_workload_accumulation_line"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Weighing_System"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <RadioGroup
        android:id="@+id/radioGroup_key_main_b_workload_accumulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="175dp" >

       <RadioButton
           android:id="@+id/radioButton_key_main_b_workload_accumulation_manual"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/Manual"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:textSize="25sp" />

       <RadioButton
           android:id="@+id/radioButton_key_main_b_workload_accumulation_auto"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/Automatic"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:textSize="25sp" />

   </RadioGroup>

</RelativeLayout>
