<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout_key_main_b_workload_errordetect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_key_bg" 
    android:splitMotionEvents="false">

    <ImageView
        android:id="@+id/imageView_key_main_b_workload_errordetect_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/main_key_line" />
    
    <taeha.wheelloader.fseries_monitor.main.TextFitTextView
        android:id="@+id/textView_key_main_b_workload_errordetect_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView_key_main_b_workload_errordetect_line"
        android:layout_alignLeft="@+id/imageView_key_main_b_workload_errordetect_line"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Error_Detection"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <RadioGroup
        android:id="@+id/radioGroup_key_main_b_workload_errordetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="175dp" 
        android:splitMotionEvents="false">

       <RadioButton
           android:id="@+id/radioButton_key_main_b_workload_errordetect_off"
           android:layout_width="500dp"
           android:layout_height="wrap_content"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/Off"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:singleLine="true"
           android:textSize="25sp" />

       <RadioButton
           android:id="@+id/radioButton_key_main_b_workload_errordetect_on"
           android:layout_width="500dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:button="@drawable/_selector_radio_btn"
           android:text="@string/On"
           android:textColor="@drawable/_selector_radio_txt_white_amber"
           android:singleLine="true"
           android:textSize="25sp" />

   </RadioGroup>

</RelativeLayout>
