<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_popup01_bg" 
    android:splitMotionEvents="false">

    <ImageView
        android:id="@+id/imageView_popup_entertainment_lock_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:src="@drawable/menu_popup01_line" />

    <taeha.wheelloader.fseries_monitor.main.TextFitTextView
        android:id="@+id/textView_popup_entertainment_lock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/Entertainment_limit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="25sp" />
    
    <taeha.wheelloader.fseries_monitor.main.TextFitTextView
        android:id="@+id/textView_popup_entertainment_lock_multimedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="97dp"
        android:background="@drawable/_selector_popup01_long_btn1"
        android:gravity="center"
        android:text="@string/Multimedia"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />
    <CheckBox
	    android:id="@+id/checkBox_popup_entertainment_lock_multimedia"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:button="@drawable/_selector_check_btn"
	    android:layout_centerVertical="true"
	    android:layout_alignTop="@+id/textView_popup_entertainment_lock_multimedia"
	    android:layout_alignLeft="@+id/textView_popup_entertainment_lock_multimedia"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	 	/>

    
    <taeha.wheelloader.fseries_monitor.main.TextFitTextView
        android:id="@+id/textView_popup_entertainment_lock_smartterminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="181dp"
        android:background="@drawable/_selector_popup01_long_btn1"
        android:gravity="center"
        android:text="@string/Smart_Terminal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />
   
    <CheckBox
	    android:id="@+id/checkBox_popup_entertainment_lock_smartterminal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:button="@drawable/_selector_check_btn"
	    android:layout_centerVertical="true"
	    android:layout_alignTop="@+id/textView_popup_entertainment_lock_smartterminal"
	    android:layout_alignLeft="@+id/textView_popup_entertainment_lock_smartterminal"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	 	/>
    
     <taeha.wheelloader.fseries_monitor.main.TextFitTextView
        android:id="@+id/textView_popup_entertainment_lock_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="265dp"
        android:background="@drawable/_selector_popup01_long_btn1"
        android:gravity="center"
        android:text="@string/OK"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />
     
</RelativeLayout>
