<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout_key_main_b_beaconlamp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_key_bg" 
    android:splitMotionEvents="false">

    <RelativeLayout
        android:id="@+id/RelativeLayout_key_main_b_beaconlamp_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:splitMotionEvents="false">

        <RadioGroup
            android:id="@+id/radioGroup_key_main_b_beaconlamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="111dp"
            android:layout_marginTop="121dp" 
            android:splitMotionEvents="false">

            <RadioButton
                android:id="@+id/radioButton_key_main_b_beaconlamp_off"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:button="@drawable/_selector_radio_btn"
                android:text="@string/Off"
                android:textColor="@drawable/_selector_radio_txt_white_amber"
                android:singleLine="true"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioButton_key_main_b_beaconlamp_on"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:button="@drawable/_selector_radio_btn"
                android:text="@string/On"
                android:textColor="@drawable/_selector_radio_txt_white_amber"
                android:singleLine="true"
                android:textSize="25sp" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_key_main_b_beaconlamp_notavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="111dp"
        android:visibility="invisible" 
        android:splitMotionEvents="false">

        <taeha.wheelloader.fseries_monitor.main.TextFitTextView
            android:id="@+id/textView_key_main_b_beaconlamp_notavailable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Beacon_Lamp_is_NOT_equipped"
            android:textColor="@drawable/_selector_radio_txt_white_amber"
            android:textSize="25sp" />
    </RelativeLayout>
</RelativeLayout>